// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GooglePayLogo stories snapshot > Decorative story renders and matches snapshot 1`] = `
<img
  alt=""
  aria-hidden="true"
  class=" h-4 w-auto object-contain"
  height="16"
  src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAiIGhlaWdodD0iMTAwIj48L3N2Zz4="
  width="48"
/>
`;

exports[`GooglePayLogo stories snapshot > Default story renders and matches snapshot 1`] = `
<img
  alt="Google Pay"
  class=" h-4 w-auto object-contain"
  height="16"
  src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAiIGhlaWdodD0iMTAwIj48L3N2Zz4="
  width="48"
/>
`;

exports[`GooglePayLogo stories snapshot > Inverted story renders and matches snapshot 1`] = `
<div
  style="background-color: rgb(0, 0, 0); padding: 20px; border-radius: 8px;"
>
  <img
    alt="Google Pay"
    class=" h-4 w-auto object-contain"
    height="16"
    src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAiIGhlaWdodD0iMTAwIj48L3N2Zz4="
    style="filter: brightness(0) invert(1);"
    width="48"
  />
</div>
`;

exports[`GooglePayLogo stories snapshot > WithCustomClassName story renders and matches snapshot 1`] = `
<img
  alt="Google Pay"
  class="custom-class h-4 w-auto object-contain"
  height="16"
  src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAiIGhlaWdodD0iMTAwIj48L3N2Zz4="
  width="48"
/>
`;
